# jsonschema-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  MIGRATION.md  README.md  codecov.yaml
.github/: dependabot.yml
bench_helpers/: Cargo.toml
bench_helpers/src/: lib.rs
bindings/python/: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  README.rst  build-sdist.sh  build.rs  jsonschema_rs.pyi  pyproject.toml  setup.py  tox.ini
bindings/python/benches/: bench.py
bindings/python/jsonschema_rs/: __init__.py  __init__.pyi
bindings/python/src/: ffi.rs  lib.rs  ser.rs  string.rs  types.rs
bindings/python/tests-py/: test_jsonschema.py  test_suite.py
crates/benchmark/: Cargo.toml  README.md
crates/benchmark-suite/: Cargo.toml  README.md
crates/benchmark-suite/benches/: boon.rs  jsonschema.rs  jsonschema_valid.rs  valico.rs
crates/benchmark/data/: canada.json  fast_schema.json  keywords.json  openapi.json
crates/benchmark/src/: lib.rs
crates/jsonschema/: Cargo.toml
crates/jsonschema-cli/: Cargo.toml  README.md
crates/jsonschema-cli/src/: main.rs
crates/jsonschema-cli/tests/: cli.rs
crates/jsonschema-py/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  pyproject.toml  rust-toolchain.toml  tox.ini
crates/jsonschema-py/benches/: bench.py  conftest.py
crates/jsonschema-py/src/: lib.rs  types.rs
crates/jsonschema-py/tests-py/: test_jsonschema.py  test_readme.py  test_suite.py
crates/jsonschema-referencing/: Cargo.toml  README.md
crates/jsonschema-referencing-testsuite/: Cargo.toml
crates/jsonschema-referencing-testsuite-codegen/: Cargo.toml
crates/jsonschema-referencing-testsuite-codegen/src/: generator.rs  lib.rs  loader.rs
crates/jsonschema-referencing-testsuite-internal/: Cargo.toml
crates/jsonschema-referencing-testsuite-internal/src/: lib.rs
crates/jsonschema-referencing-testsuite/src/: lib.rs
crates/jsonschema-referencing/benches/: anchor.rs  pointer.rs  registry.rs  subresources.rs
crates/jsonschema-referencing/src/: error.rs  lib.rs  list.rs  meta.rs  registry.rs  resolver.rs  resource.rs  retriever.rs  segments.rs  uri.rs  vocabularies.rs
crates/jsonschema-referencing/tests/: suite.rs
crates/jsonschema-testsuite/: Cargo.toml  README.md
crates/jsonschema-testsuite-codegen/: Cargo.toml
crates/jsonschema-testsuite-codegen/src/: config.rs  generator.rs  idents.rs  lib.rs  loader.rs  mocks.rs
crates/jsonschema-testsuite-internal/: Cargo.toml
crates/jsonschema-testsuite-internal/src/: lib.rs
crates/jsonschema-testsuite/src/: lib.rs
crates/jsonschema/benches/: jsonschema.rs  keywords.rs
crates/jsonschema/src/: compiler.rs  content_encoding.rs  ecma.rs  error.rs  lib.rs  node.rs  options.rs  output.rs  paths.rs  primitive_type.rs  properties.rs  resolver.rs  retriever.rs  schema_node.rs  schemas.rs  validator.rs
crates/jsonschema/tests/: draft7_instance_paths.json  output.rs  suite.rs
draft/: Cargo.toml
draft/src/: lib.rs
fuzz/: Cargo.toml  dict
fuzz/fuzz_targets/: builder.rs  compile.rs  referencing.rs  validation.rs
fuzz/seeds/: array  draft-2020-12-3  nested-object  object  ref-combo  ref-external  ref-nested  ref-recursive
fuzz/seeds/compile/: combinators  draft-2020-12-1  draft-2020-12-2  draft-2020-12-4  enum  ref-local
jsonschema/: Cargo.toml  instance.json  schema.json
jsonschema-csr/: Cargo.toml
jsonschema-csr/benches/: resolver.rs  validation.rs
jsonschema-csr/src/: lib.rs
jsonschema-csr/src/compilation/: collection.rs  context.rs  edges.rs  error.rs  mod.rs  nodes.rs  references.rs  resolver.rs  resolving.rs  testing.rs
jsonschema-csr/src/vocabularies/: mod.rs  ref_.rs
jsonschema-rewrite/: Cargo.toml
jsonschema-rewrite/src/: lib.rs  testing.rs  value_type.rs
jsonschema-rewrite/src/data/: tests.json
jsonschema-rewrite/src/schema/: collection.rs  edges.rs  error.rs  graph.rs  mod.rs  resolving.rs  testing.rs
jsonschema-rewrite/src/vocabularies/: mod.rs  references.rs
jsonschema-test-suite/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
jsonschema-test-suite/proc_macro/: Cargo.toml
jsonschema-test-suite/proc_macro/src/: attribute_config.rs  lib.rs  mockito_mocks.rs  test_case.rs
jsonschema-test-suite/test_case/: Cargo.toml  README.md
jsonschema-test-suite/tests/: no-op.rs
jsonschema/benches/: boon.rs  citm_catalog.json  citm_catalog_schema.json  fast_invalid.json  fast_valid.json  geojson.json  jsonschema.rs  jsonschema_valid.rs  kubernetes.json  small_invalid.json  valico.rs
jsonschema/benches/data/: keywords.json  swagger.json
jsonschema/src/: content_encoding.rs  content_media_type.rs  error.rs  lib.rs  main.rs  output.rs  paths.rs  primitive_type.rs  properties.rs  regex.rs  resolver.rs  schema_node.rs  schemas.rs  validator.rs
jsonschema/src/compilation/: context.rs  mod.rs  options.rs
jsonschema/src/keywords/: additional_items.rs  additional_properties.rs  all_of.rs  any_of.rs  boolean.rs  const_.rs  contains.rs  content.rs  custom.rs  custom_keyword.rs  custom_keyword_schema.rs  dependencies.rs  enum_.rs  exclusive_maximum.rs  exclusive_minimum.rs  format.rs  helpers.rs  if_.rs  items.rs  max_items.rs  max_length.rs  max_properties.rs  maximum.rs  min_items.rs  min_length.rs  min_properties.rs  minimum.rs  mod.rs  multiple_of.rs  not.rs  one_of.rs  pattern.rs  pattern_properties.rs  prefix_items.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unevaluated_properties.rs  (+1 more)
jsonschema/src/resolver/: internal.rs  mod.rs
jsonschema/tests/: draft7_instance_paths.json  test_suite.rs
perf-helpers/: .gitignore  Cargo.toml  run
perf-helpers/src/: main.rs
profiler/: Cargo.toml
profiler/src/: main.rs
python/: CHANGELOG.md  Cargo.toml  MANIFEST.in  README.rst  bench.py  build-sdist.sh  build-wheels.sh  pyproject.toml  rust-toolchain  setup.py  tox.ini
python/jsonschema_rs/: __init__.py
python/pysrc/jsonschema_rs/: __init__.py
python/src/: lib.rs  ser.rs  string.rs
python/tests-py/: test_jsonschema.py  test_suite.py
(+209 files in other folders)
