[package]
name = "jsonschema"
version = "0.2.0"
authors = ["dmitry.dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A crate for performing JSON schema validation"
repository = "https://github.com/Stranger6667/jsonschema-rs"
keywords = ["jsonschema", "validation"]
exclude = ["tests"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
url = "2.1.1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
regex = "1.3.4"
base64 = "0.12.0"
chrono = "0.4.10"
reqwest = { version = "0.10.4", features = ["blocking", "json"]}

[dev-dependencies]
criterion = "0.3.1"
draft = {path = "draft"}
jsonschema-valid = "0.4.0"
valico = "3.2.0"

[[bench]]
name = "jsonschema"
harness = false
