[package]
name = "jsonschema"
version = "0.3.0"
authors = ["dmitry.dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A crate for performing JSON schema validation"
repository = "https://github.com/Stranger6667/jsonschema-rs"
keywords = ["jsonschema", "validation"]
exclude = ["tests", "python"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
url = "2"
lazy_static = "1"
percent-encoding = "2"
regex = "1"
base64 = ">= 0.2"
chrono = ">= 0.2"
rayon = "1"
reqwest = { version = ">= 0.10", features = ["blocking", "json"]}
parking_lot = ">= 0.1"
num-cmp = ">= 0.1"
paste = ">= 0.1"

[dev-dependencies]
criterion = ">= 0.1"
draft = {path = "draft"}
jsonschema-valid = ">= 0.1"
valico = "3"
test-case = "1"

[[bench]]
name = "jsonschema"
harness = false

[profile.release]
codegen-units = 1
lto = "on"
