[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.70"
edition = "2021"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
repository = "https://github.com/Stranger6667/jsonschema-rs"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
ahash = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.5"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

