[package]
name = "bench_helpers"
version = "0.1.0"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5.1", features = [], default-features = false }
codspeed-criterion-compat = "2.6.0"
