[package]
name = "draft"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
serde_json = "1.0.48"
heck = "0.3.1"
quote = "1.0.5"
syn = "1.0.21"
proc-macro2 = "1.0.12"
