[package]
name = "benchmark-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jsonschema = { path = "../crates/jsonschema/" }
serde_json = "1"

[workspace]
members = ["."]

[profile.release]
debug = true

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
bench = false
