[package]
name = "jsonschema-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jsonschema = { path = "../crates/jsonschema/" }
serde_json = "1"

[workspace]
members = ["."]

[profile.release]
debug = true

[[bin]]
name = "builder"
path = "fuzz_targets/builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "validation"
path = "fuzz_targets/validation.rs"
test = false
doc = false
bench = false
