[package]
name = "jsonschema-csr"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.8"
num-cmp = "0.1.0"
serde_json = "1.0.79"
url = "2.2.2"

[dev-dependencies]
bench_helpers = { path = "../bench_helpers" }
criterion = "0.3.5"
test-case = "2.0.2"

[[bench]]
harness = false
name = "resolver"
