[package]
name = "jsonschema-csr"
version = "0.1.0"
edition = "2021"

[dependencies]
num-cmp = "0.1.0"
once_cell = "1.10.0"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.79"
url = "2.2.2"

[dev-dependencies]
bench_helpers = { path = "../bench_helpers" }
criterion = { version = "0.4.0", features = [], default-features = false }
test-case = "2.0.2"

[features]
default = []
benchmark-internals = []

[[bench]]
harness = false
name = "resolver"

[[bench]]
harness = false
name = "validation"
