[package]
name = "jsonschema-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
num-cmp = "0.1"
once_cell = "1.10"
percent-encoding = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
url = "2.2"

[dev-dependencies]
test-case = "2.0"

[features]
default = []
