[package]
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
description = "A crate for performing JSON schema validation"
edition = "2021"
exclude = [
  "tests",
  "python",
  "benches/data/*.json",
  ".github",
  ".yamllint",
  ".pre-commit-config.yaml",
  ".gitignore",
  ".gitmodules",
  "*.md",
]
keywords = ["jsonschema", "validation"]
license = "MIT"
name = "jsonschema"
readme = "../README.md"
repository = "https://github.com/Stranger6667/jsonschema-rs"
version = "0.18.0"
rust-version = "1.56.1"

categories = ["web-programming"]

[[bin]]
name = "jsonschema"

[features]
cli = ["clap"]
default = ["resolve-http", "resolve-file", "cli"]
draft201909 = []
draft202012 = []

resolve-http = ["reqwest"]
resolve-file = []

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
clap = { version = "4.5", features = ["derive"], optional = true }
fancy-regex = "0.13"
fraction = { version = "0.15", default-features = false, features = [
  "with-bigint",
] }
iso8601 = "0.6"
itoa = "1"
memchr = "2.7"
num-cmp = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
percent-encoding = "2.3"
regex = "1.10"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "macros"] }
url = "2.5"
uuid = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
bench_helpers = { path = "../bench_helpers" }
criterion = { version = "0.5.1", features = [], default-features = false }
lazy_static = "1.4"                                                               # Needed for json schema test suite
json_schema_test_suite = { version = "0.3.0", path = "../jsonschema-test-suite" }
jsonschema-valid = "0.5"
mockito = "0.31"
paste = "1.0"
test-case = "3"
valico = "3.6"

# Benchmarks for `jsonschema`
[[bench]]
harness = false
name = "jsonschema"

# Benchmarks for `valico`
[[bench]]
harness = false
name = "valico"

# Benchmarks for `jsonschema_valid`
[[bench]]
harness = false
name = "jsonschema_valid"

[profile.release]
codegen-units = 1
lto = "fat"
