[package]
name = "perf_helpers"
version = "0.1.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jsonschema = { path = "../jsonschema" }
serde_json = "1"

[profile.release]
debug = true
