[package]
name = "jsonschema-python"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = "1.0"

[dependencies.jsonschema]
path = "../"

[dependencies.pyo3]
version = "0.9.1"
features = ["extension-module"]