[package]
name = "jsonschema-python"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.4", features = ["chrono"] }

[dependencies]
serde_json = "1"
serde = "1"
# Path is used for local builds, while version is used while publishing the artifact
jsonschema = { path = "../", version = "= 0.3.1" }
pyo3 = { version = ">= 0.11", features = ["extension-module"] }
pyo3-built = "0.4"

[package.metadata.maturin]
requires-python = ">=3.5"
project-url = ["https://github.com/Stranger6667/jsonschema-rs"]
maintainer = "Dmitry Dygalo"
maintainer-email = "Dmitry Dygalo <dadygalo@gmail.com>"
classifier = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[profile.release]
codegen-units = 1
lto = "on"
