[package]
name = "jsonschema-python"
version = "0.16.2"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.rst"
description = "JSON schema validaton library"
repository = "https://github.com/Stranger6667/jsonschema-rs"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.5.2", features = ["chrono"] }

[dependencies.jsonschema]
path = "../../jsonschema"
version = "*"
default-features = false
features = ["resolve-http", "resolve-file"]

[dependencies]
serde_json = "1.0.91"
serde = "1.0.152"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3-built = "0.4.7"

[profile.release]
codegen-units = 1
lto = "on"
