[package]
name = "jsonschema-python"
version = "0.18.0"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "JSON schema validaton library"
repository = "https://github.com/Stranger6667/jsonschema-rs"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
rust-version = "1.56.1"

[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.7.1", features = ["cargo-lock", "chrono"] }
pyo3-build-config = { version = "0.21.2", features = ["resolve-config"] }

[dependencies.jsonschema]
path = "../../jsonschema"
version = "*"
default-features = false
features = ["resolve-http", "resolve-file", "draft201909", "draft202012"]

[dependencies]
serde_json = "1.0.91"
serde = "1.0.152"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pyo3-built = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
