[tool.black]
line-length = 120
target_version = ["py37"]

[tool.isort]
# config compatible with Black
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "jsonschema_rs"
known_third_party = []

[project]
name = "jsonschema_rs"
description = "Fast JSON Schema validation for Python implemented in Rust"
authors = [
    {name = "Dmitry Dygalo", email = "dadygalo@gmail.com"}
]
requires-python = ">=3.7"
project-url = { repository = "https://github.com/Stranger6667/jsonschema-rs" }
maintainer = "Dmitry Dygalo"
maintainer-email = "Dmitry Dygalo <dadygalo@gmail.com>"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
homepage = "https://github.com/Stranger6667/jsonschema-rs/tree/master/python"
repository = "https://github.com/Stranger6667/jsonschema-rs/"

[build-system]
requires = ["maturin>=0.14.0<15"]
build-backend = "maturin"

[tool.maturin]
strip = true
