[project]
name = "jsonschema_rs"
description = "Fast JSON Schema validation for Python implemented in Rust"
keywords = ["jsonschema", "validation", "rust"]
authors = [
    {name = "Dmitry Dygalo", email = "dadygalo@gmail.com"}
]
maintainers = [
    {name = "Dmitry Dygalo", email = "dadygalo@gmail.com"}
]
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Stranger6667/jsonschema-rs/tree/master/python"
Changelog = "https://github.com/Stranger6667/jsonschema-rs/blob/master/bindings/python/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Stranger6667/jsonschema-rs/issues"
Source = "https://github.com/Stranger6667/jsonschema-rs"
Funding = 'https://github.com/sponsors/Stranger6667'

[tool.black]
line-length = 120
target_version = ["py37"]

[tool.isort]
# config compatible with Black
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "jsonschema_rs"
known_third_party = []

[tool.maturin]
python-source = "python"
strip = true

[build-system]
requires = ["maturin>=1.1"]
build-backend = "maturin"
