[package]
name = "benchmark"
version = "0.1.0"
rust-version = "1.80"
readme = "README.md"
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
