[package]
name = "jsonschema-cli"
version = "0.19.0"
description = "A command line tool for JSON Schema validation."
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.19.0", path = "../jsonschema/" }
serde_json.workspace = true

[[bin]]
name = "jsonschema-cli"
path = "src/main.rs"

[lints]
workspace = true
