[package]
name = "jsonschema-py"
version = "0.22.2"
description = "A high-performance JSON Schema validator for Python"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "jsonschema_rs"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.7.1", features = ["cargo-lock", "chrono"] }
pyo3-build-config = { version = "0.22.2", features = ["resolve-config"] }

[dependencies]
jsonschema = { path = "../jsonschema/" }
serde.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.22.2", features = ["extension-module"] }
pyo3-built = "0.5"
