[package]
name = "jsonschema-referencing-testsuite-internal"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
