[package]
name = "referencing"
version = "0.22.2"
description = "An implementation-agnostic JSON reference resolution library for Rust."
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
fluent-uri = { version = "0.3.1", features = ["serde"] }
once_cell = "1.20.1"
percent-encoding = "2.3.1"
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
benchmark = { path = "../benchmark/" }
codspeed-criterion-compat = "2.7"
criterion = { version = "0.5", default-features = false }
referencing_testsuite = { package = "jsonschema-referencing-testsuite", path = "../jsonschema-referencing-testsuite/" }
test-case = "3.3.1"

[[bench]]
harness = false
name = "subresources"

[[bench]]
harness = false
name = "pointer"

[[bench]]
harness = false
name = "anchor"

[[bench]]
harness = false
name = "registry"
