[package]
name = "jsonschema-testsuite-internal"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
serde = { version = "1", features = ["derive"] }
