[package]
name = "jsonschema"
version = "0.20.0"
description = "JSON schema validaton library"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["resolve-http", "resolve-file"]

resolve-http = ["reqwest"]
resolve-file = []
# Deprecated in favor of `jsonschema-cli`
cli = []
# Deprecated: Drafts 2019-09 & 2020-12 are enabled by default
draft201909 = []
draft202012 = []

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
fancy-regex = "0.13"
fraction = { version = "0.15", default-features = false, features = [
  "with-bigint",
] }
iso8601 = "0.6"
itoa = "1"
memchr = "2.7"
num-cmp = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
percent-encoding = "2.3"
regex = "1.10"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
time = { version = "0.3", features = ["parsing", "macros"] }
url = "2.5"
uuid-simd = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
benchmark = { path = "../benchmark/" }
codspeed-criterion-compat = "2.7"
criterion = { version = "0.5", default-features = false }
mockito = "1.1"
testsuite = { package = "jsonschema-testsuite", path = "../jsonschema-testsuite" }
test-case = "3"

[[bench]]
harness = false
name = "jsonschema"

[[bench]]
harness = false
name = "keywords"
